--- a/notebooks/tut_01_preprocess.ipynb
+++ b/notebooks/tut_01_preprocess.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/gibsonlab/mdsine2_tutorial/blob/main/notebooks/tut_01_preprocess.ipynb)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,11 +28,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "IN_COLAB = 'google.colab' in sys.modules\n",
+    "\n",
+    "if IN_COLAB:\n",
+    "    !git clone https://github.com/gerberlab/MDSINE2\n",
+    "    !cd MDSINE2 && git fetch && git checkout cv-wip-mirror-dem\n",
+    "    !pip install MDSINE2/."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import mdsine2 as md2\n",
-    "from mdsine2.util import make_toy\n",
-    ""
+    "from mdsine2.util import make_toy\n"
    ]
   },
   {
@@ -41,8 +63,7 @@
     "replicates_data_dir = data_dir / 'replicates'\n",
     "\n",
     "for ff in [healthy_data_dir, unhealthy_data_dir, replicates_data_dir]:\n",
-    "    ff.mkdir(parents=True, exist_ok=True)\n",
-    ""
+    "    ff.mkdir(parents=True, exist_ok=True)\n"
    ]
   },
   {
@@ -58,8 +79,7 @@
     "sep = '\\t'\n",
     "\n",
     "for tsv_f in tsv_files:\n",
-    "    data[tsv_f.stem] = pd.read_csv(tsv_f, index_col=0, sep=sep)\n",
-    ""
+    "    data[tsv_f.stem] = pd.read_csv(tsv_f, index_col=0, sep=sep)\n"
    ]
   },
   {
@@ -81,8 +101,7 @@
     "subj_counts_only = list(subj_counts - subj_qpcr)\n",
     "\n",
     "data['counts'] = data['counts'].drop(columns=subj_counts_only)\n",
-    "data['metadata'] = data['metadata'].drop(index=subj_counts_only)\n",
-    ""
+    "data['metadata'] = data['metadata'].drop(index=subj_counts_only)\n"
    ]
   },
   {
@@ -138,8 +157,7 @@
     "        sep=sep, \n",
     "        index=True, \n",
     "        header=True,\n",
-    "        )\n",
-    ""
+    "        )\n"
    ]
   },
   {
@@ -170,8 +188,7 @@
     "        sep=sep, \n",
     "        index=True, \n",
     "        header=True,\n",
-    "        )\n",
-    ""
+    "        )\n"
    ]
   },
   {
@@ -200,14 +217,16 @@
     "        taxa_f=tsv_files['rdp_species'],\n",
     "        perturbations_f=tsv_files['perturbations'],\n",
     "        n_taxa=15,\n",
-    "        )\n",
-    ""
+    "        )\n"
    ]
   }
  ],
- "nbformat": 4,
- "nbformat_minor": 2,
  "metadata": {
+  "kernelspec": {
+   "display_name": "mdsine2",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -218,8 +237,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.10.8"
   },
-  "orig_nbformat": 4
- }
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "beba50113cf04c9ca1c9a3ac6af58136127bf597d62df57e30b29cd1f5120155"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
