Updated colab link

--- a/notebooks/tut_01_preprocess.ipynb
+++ b/notebooks/tut_01_preprocess.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/gibsonlab/mdsine2_tutorials/blob/main/notebooks/tut_01_preprocess.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/gibsonlab/mdsine2_tutorials/blob/main/notebooks/tut_01_preprocess.ipynb)"
    ]
   },
   {
