Added data fetch

--- a/notebooks/tut_01_preprocess.ipynb
+++ b/notebooks/tut_01_preprocess.ipynb
@@ -32,6 +32,9 @@
     "IN_COLAB = 'google.colab' in sys.modules\n",
     "\n",
     "if IN_COLAB:\n",
+    "    !curl -LJO https://github.com/gibsonlab/mdsine2_tutorials/raw/main/data/raw_tables.zip\n",
+    "    !mkdir -p ./data/ && unzip raw_tables.zip -d ./data/\n",
+    "\n",
     "    !git clone https://github.com/gerberlab/MDSINE2\n",
     "    !cd MDSINE2 && git fetch && git checkout cv-wip-mirror-dem\n",
     "    !pip install MDSINE2/."
