--- a/notebooks/tut_01_preprocess.ipynb
+++ b/notebooks/tut_01_preprocess.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +37,25 @@
     "\n",
     "    !git clone https://github.com/gerberlab/MDSINE2\n",
     "    !cd MDSINE2 && git fetch && git checkout cv-wip-mirror-dem\n",
-    "    !pip install MDSINE2/."
+    "    !pip install MDSINE2/.\n",
+    "\n",
+    "else:\n",
+    "    !cd .."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG] Using default logger (stdout, stderr).\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
@@ -54,12 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Specify data input and output directories\n",
-    "data_dir = Path('../data/')\n",
+    "data_dir = Path('./data/')\n",
     "raw_data_dir = data_dir / 'raw_tables'\n",
     "healthy_data_dir = data_dir / 'healthy'\n",
     "unhealthy_data_dir = data_dir / 'unhealthy'\n",
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,9 +214,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] TaxaSet parsng new taxonomy table. Resetting\n",
+      "[INFO] No `name` found - assuming index is the name\n",
+      "[DEBUG] Reseting perturbations\n",
+      "[INFO] TaxaSet parsng new taxonomy table. Resetting\n",
+      "[INFO] No `name` found - assuming index is the name\n",
+      "[DEBUG] Reseting perturbations\n",
+      "[INFO] TaxaSet parsng new taxonomy table. Resetting\n",
+      "[INFO] No `name` found - assuming index is the name\n",
+      "[DEBUG] Reseting perturbations\n",
+      "[INFO] TaxaSet parsng new taxonomy table. Resetting\n",
+      "[INFO] No `name` found - assuming index is the name\n",
+      "[DEBUG] Reseting perturbations\n",
+      "[INFO] TaxaSet parsng new taxonomy table. Resetting\n",
+      "[INFO] No `name` found - assuming index is the name\n",
+      "[DEBUG] Reseting perturbations\n",
+      "[INFO] TaxaSet parsng new taxonomy table. Resetting\n",
+      "[INFO] No `name` found - assuming index is the name\n",
+      "[DEBUG] Reseting perturbations\n"
+     ]
+    }
+   ],
    "source": [
     "# Read in the preprocessed files, and make toy datasets.\n",
     "for ff in [healthy_data_dir, unhealthy_data_dir, replicates_data_dir]:\n",
@@ -222,6 +258,13 @@
     "        n_taxa=15,\n",
     "        )\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
