--- a/notebooks/tut_02_inference.ipynb
+++ b/notebooks/tut_02_inference.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,17 @@
     "IN_COLAB = 'google.colab' in sys.modules\n",
     "\n",
     "if IN_COLAB:\n",
-    "    !curl -LJO https://github.com/gibsonlab/mdsine2_tutorials/raw/main/data/raw_tables.zip\n",
-    "    !mkdir -p ./data/ && unzip raw_tables.zip -d ./data/\n",
+    "    !curl -LJO https://github.com/gibsonlab/mdsine2_tutorials/raw/main/data/replicates.zip\n",
+    "    !curl -LJO https://github.com/gibsonlab/mdsine2_tutorials/raw/main/data/healthy.zip\n",
+    "    \n",
+    "    !mkdir -p ./data/ && unzip healthy.zip -d ./data/ && unzip replicates.zip -d ./data/\n",
     "\n",
     "    !git clone https://github.com/gerberlab/MDSINE2\n",
     "    !cd MDSINE2 && git fetch && git checkout cv-wip-mirror-dem\n",
-    "    !pip install MDSINE2/."
+    "    !pip install MDSINE2/.\n",
+    "\n",
+    "else:\n",
+    "    !cd .."
    ]
   },
   {
@@ -53,12 +58,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "replicates_dir = Path('../data/replicates-toy')\n",
-    "healthy_dir = Path('../data/healthy-toy')\n",
-    "unhealthy_dir = Path('../data/unhealthy-toy')\n",
+    "data_dir = Path('./data/')\n",
+    "replicates_dir = data_dir / 'replicates-toy'\n",
+    "healthy_dir = data_dir / 'healthy-toy'\n",
     "\n",
-    "output_dir = Path('../output/')\n",
-    "fig_dir = Path('../figs/')\n",
+    "output_dir = Path('./output/')\n",
+    "fig_dir = Path('./figs/')\n",
     "\n",
     "output_dir.mkdir(exist_ok=True, parents=True)\n",
     "fig_dir.mkdir(exist_ok=True, parents=True)\n"
@@ -72,7 +77,7 @@
    "source": [
     "# # Read data\n",
     "studies = []\n",
-    "for data_dir in [replicates_dir, healthy_dir, unhealthy_dir]:\n",
+    "for data_dir in [replicates_dir, healthy_dir]:\n",
     "    tsv_files = sorted(data_dir.glob('*.tsv'))\n",
     "    tsv_files = {f.stem : f for f in tsv_files}\n",
     "\n",
@@ -87,7 +92,7 @@
     "    )\n",
     "    studies.append(study)\n",
     "\n",
-    "replicates, healthy, unhealthy = studies\n"
+    "replicates, healthy = studies\n"
    ]
   },
   {
@@ -224,7 +229,7 @@
     "chains = []\n",
     "\n",
     "for seed in seeds:\n",
-    "    chain_basepath = output_dir / \"mdsine2\" / (unhealthy.name + \"{:04d}\".format(seed))\n",
+    "    chain_basepath = output_dir / \"mdsine2\" / (healthy.name + \"{:04d}\".format(seed))\n",
     "    chain_basepath.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "    # Initialize parameters of the model \n",
@@ -242,12 +247,12 @@
     "    params.INITIALIZATION_KWARGS[STRNAMES.CLUSTERING]['value_option'] = 'no-clusters'\n",
     "\n",
     "    # Initilize the graph\n",
-    "    mcmc = md2.initialize_graph(params=params, graph_name=unhealthy.name, subjset=unhealthy)\n",
+    "    mcmc = md2.initialize_graph(params=params, graph_name=healthy.name, subjset=healthy)\n",
     "\n",
     "    # Perform inference\n",
     "    mcmc = md2.run_graph(mcmc, crash_if_error=True)\n",
     "\n",
-    "    visualize(mcmc, unhealthy, seed)\n",
+    "    visualize(mcmc, healthy, seed)\n",
     "    chains.append(mcmc)\n"
    ]
   },
@@ -296,7 +301,7 @@
     "params.INITIALIZATION_KWARGS[STRNAMES.CLUSTERING]['value_option'] = 'fixed-clustering'\n",
     "params.INITIALIZATION_KWARGS[STRNAMES.CLUSTERING]['value'] = str(chain_basepath / \"mcmc.pkl\")\n",
     "\n",
-    "mcmc = md2.initialize_graph(params=params, graph_name=unhealthy.name, subjset=unhealthy)\n",
+    "mcmc = md2.initialize_graph(params=params, graph_name=healthy.name, subjset=healthy)\n",
     "mcmc = md2.run_graph(mcmc, crash_if_error=True)\n"
    ]
   },
