--- a/notebooks/tut_02_inference.ipynb
+++ b/notebooks/tut_02_inference.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,6 +19,7 @@
     "IN_COLAB = 'google.colab' in sys.modules\n",
     "\n",
     "if IN_COLAB:\n",
+    "    # Get data\n",
     "    !curl -LJO https://github.com/gibsonlab/mdsine2_tutorials/raw/main/data/replicates.zip\n",
     "    !curl -LJO https://github.com/gibsonlab/mdsine2_tutorials/raw/main/data/healthy.zip\n",
     "    \n",
