--- a/notebooks/tut_01_preprocess.ipynb
+++ b/notebooks/tut_01_preprocess.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "kCizOMYdqISO",
         "outputId": "845ed5a4-85ec-412f-9f63-a3c5a20fd6c6",
@@ -198,7 +198,7 @@
         "\n",
         "if IN_COLAB:\n",
         "    !curl -LJO https://github.com/gibsonlab/mdsine2_tutorials/raw/main/data/raw_tables.zip\n",
-        "    !mkdir -p ./data/ && unzip raw_tables.zip -d ./data/\n",
+        "    !mkdir -p ./data/ && unzip -o raw_tables.zip -d ./data/\n",
         "\n",
         "    !git clone https://github.com/gerberlab/MDSINE2\n",
         "    !cd MDSINE2 && git fetch && git checkout cv-wip-mirror-dem\n",
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "epmHpyo_qISP",
         "outputId": "f82b8e44-96ed-4a60-ae4f-df5c6078cdea",
@@ -236,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "ycjyTQoeqISP"
       },
@@ -254,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "0RMpcWKpqISP"
       },
@@ -281,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "7DQRrHGFqISQ"
       },
@@ -307,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "V6vwU8mpqISR"
       },
@@ -336,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "QU4JLg_uqISS"
       },
@@ -360,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "OwZEz3LsqISS"
       },
@@ -392,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "SfnrCik-qIST",
         "outputId": "948b01e5-1447-493f-8fcd-2d132812bc86",
