--- a/notebooks/tut_02_inference.ipynb
+++ b/notebooks/tut_02_inference.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "0c3oF8fTnDx_",
         "outputId": "9917aa7a-95e3-4dd3-8e4a-f731e0a85188",
@@ -151,10 +151,9 @@
         "    !curl -LJO https://github.com/gibsonlab/mdsine2_tutorials/raw/main/data/healthy-toy.zip\n",
         "    \n",
         "    !mkdir -p ./data/\n",
-        "    !unzip healthy-toy.zip -d ./data/ && unzip replicates-toy.zip -d ./data/\n",
+        "    !unzip -o healthy-toy.zip -d ./data/ && unzip -o replicates-toy.zip -d ./data/\n",
         "\n",
         "    !git clone https://github.com/gerberlab/MDSINE2\n",
-        "    !cd MDSINE2 && git fetch && git checkout cv-wip-mirror-dem\n",
         "    !pip install MDSINE2/.\n",
         "\n",
         "else:\n",
@@ -163,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "t9siKxajnDyA",
         "outputId": "4f662017-57c1-49f8-900c-3de83da0a008",
@@ -200,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "3uDUPPFZnDyB"
       },
@@ -220,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "nqlv5GPSnDyB",
         "outputId": "b699cf01-8858-489b-e475-a308780e50e8",
@@ -276,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "4Pn1YsJJnDyB",
         "outputId": "d58c8163-ce9d-4620-b470-02938eeef3b8",
@@ -350,7 +349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "rLVJy0SznDyC",
         "outputId": "5ae3c0d6-b8c3-4646-f663-306c29936a66",
@@ -392,7 +391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "RjfZjQhUnDyE"
       },
@@ -450,7 +449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "75Vy2i9KnDyE",
         "outputId": "897a95dd-1f85-43dd-9fc4-109e0c1083f5",
@@ -1208,7 +1207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "9w54XeQ9nDyE",
         "outputId": "e8aa7a30-141e-43e8-e25e-23f1037bb3b7",
@@ -1248,7 +1247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "P8Uj3JgFnDyE",
         "outputId": "518c429b-debd-41c4-e629-5cf2b050328f",
@@ -1538,7 +1537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "NCaMsIitnDyF",
         "outputId": "5c4895b0-8573-45b0-9899-45c9f42c2106",
