Updates to notebooks

--- a/notebooks/tut_03_cross_validation.ipynb
+++ b/notebooks/tut_03_cross_validation.ipynb
@@ -122,10 +122,9 @@
         "    !curl -LJO https://github.com/gibsonlab/mdsine2_tutorials/raw/main/data/negbin_params.npz\n",
         "    \n",
         "    !mkdir -p ./data/\n",
-        "    !unzip healthy-toy.zip -d ./data/ \n",
+        "    !unzip -o healthy-toy.zip -d ./data/ \n",
         "\n",
         "    !git clone https://github.com/gerberlab/MDSINE2\n",
-        "    !cd MDSINE2 && git fetch && git checkout cv-wip-mirror-dem\n",
         "    !pip install MDSINE2/.\n",
         "\n",
         "    !pip install -U matplotlib\n",
@@ -183,7 +182,8 @@
         }
       ],
       "source": [
-        "healthy_dir = Path('./data/healthy-toy')\n",
+        "data_dir = Path('./data/')\n",
+        "healthy_dir = Path(data_dir / 'healthy-toy')\n",
         "\n",
         "cv_output_dir = Path('./output/cv')\n",
         "fig_dir = Path('./figs/')\n",
@@ -538,7 +538,7 @@
         "\n",
         "# We learned the negative binomial model in the previous tutorial, so\n",
         "# we'll reuse those parameters here.\n",
-        "negbin_params = np.load('./negbin_params.npz')\n",
+        "negbin_params = np.load(data_dir / 'negbin_params.npz')\n",
         "a0 = negbin_params['a0'].item()\n",
         "a1 = negbin_params['a1'].item()\n",
         "print(f'Reusing a0 and a1 from tutorial 2: a0 = {a0}, a1 = {a1}')\n",
