--- a/notebooks_23-05-16/tut_01_viz_data.ipynb
+++ b/notebooks_23-05-16/tut_01_viz_data.ipynb
@@ -5,6 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/gibsonlab/mdsine2_tutorials/blob/main/notebooks/tut_01_viz_data.ipynb)\n",
+    "\n",
     "# Tutorial 1: Understanding and visualizing data\n",
     "MDSINE2 uses the following data files to infer the dynamics of the microbial network:  \n",
     "1. Count data of microbial abundances\n",
