--- a/notebooks_23-05-16/tut_02_inference.ipynb
+++ b/notebooks_23-05-16/tut_02_inference.ipynb
@@ -7,8 +7,9 @@
         "id": "sjYZxl-onDx-"
       },
       "source": [
-        " [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/gibsonlab/mdsine2_tutorials/blob/main/notebooks/tut_02_inference.ipynb)\n",
-        " # Tutorial 2: Running inference with the MDSINE2 model and exploring the posterior"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/gibsonlab/mdsine2_tutorials/blob/main/notebooks/tut_02_inference.ipynb)\n",
+        "# Tutorial 2: Running inference with the MDSINE2 model and exploring the posterior\n",
+        "In this tutorial, we'll show how to run inference using MDSINE2. "
       ]
     },
     {
